[package]
name = "forge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy_egui = "0.16.1"
bevy_flycam = "0.8.1"
wgpu-types = "0.13.2"
wow_chunky = { path = "../wow_chunky" }
